# zed

./: Cargo.toml
assets/keymaps/: default-linux.json  default-macos.json
assets/prompts/: assistant_system_prompt.hbs
assets/settings/: default.json
crates/agent/src/: active_thread.rs  agent.rs  agent_diff.rs  agent_model_selector.rs  agent_panel.rs  assistant.rs  assistant_panel.rs  buffer_codegen.rs  context.rs  context_picker.rs  message_editor.rs  terminal_inline_assistant.rs  thread.rs  thread_history.rs  thread_store.rs
crates/agent_rules/: Cargo.toml
crates/agent_settings/src/: agent_settings.rs
crates/assistant/src/: assistant_panel.rs  patch.rs  slash_command_settings.rs
crates/assistant2/: Cargo.toml
crates/assistant2/src/: active_thread.rs  assistant.rs  assistant_panel.rs  context.rs  message_editor.rs  profile_selector.rs  thread.rs
crates/assistant_context_editor/src/: context.rs  context_editor.rs  slash_command_picker.rs
crates/assistant_scripting/src/: session.rs
crates/assistant_settings/src/: assistant_settings.rs
crates/assistant_slash_commands/src/: selection_command.rs
crates/assistant_tool/src/: action_log.rs
crates/auto_update_ui/: Cargo.toml
crates/eval/: Cargo.toml
crates/extensions_ui/: Cargo.toml
crates/multi_buffer/: Cargo.toml
crates/notifications/: Cargo.toml
crates/platform/: Cargo.toml
crates/platform/src/: notifications.rs
crates/platform/src/notifications/: macos.rs  other.rs
crates/prompt_library/: Cargo.toml
crates/repl/: Cargo.toml
docs/src/: environment.md
script/: generate-licenses
(+206 files in other folders)
